# zutils

./: dune  dune-project  meta-config.json  zutils.ml  zutils.opam
config/: myconfig.ml  myconfigAst.ml
dtree/: FastDT.ml
normalty/: ast.ml  dune  frontend.ml  normalty.ml  nt.ml  smtty.ml  subst.ml  syntax.ml  typed.ml  unification.ml
ocamlParser/: dune
ocamlParser/driver/: mutils.ml
prop/: ast.ml  axiom.ml  common.ml  constencoding.ml  constraint_typing.ml  dune  litencoding.ml  propencoding.ml  prover.ml  simplProp.ml  syntax.ml  test.ml  to_constant.ml  to_ctx.ml  to_id.ml  to_lit.ml  to_prop.ml  z3aux.ml
prop/frontend/: common.ml  front.ml  to_constant.ml  to_lit.ml  to_sevent.ml
prop/prover/: litencoding.ml  propencoding.ml  prover.ml  z3aux.ml
sugar/: assertion.ml  dune  pp.ml  rename.ml  sugar.ml  sugarAux.ml  typed.ml
typecheck/: constraint_typing.ml  dune  normal_constant_typing.ml  normal_id_typing.ml  normal_lit_typing.ml  normal_sevent_typing.ml  typecheck.ml
typectx/: typectx.ml  typectx.mli
utils/: dune
